# tensors

./: .gitignore  Cargo.toml  README.md  build.rs  todo
lib/: Cargo.toml  build.rs
lib/cuda/include/: binary.h  common.h  kernels.h  matmul.h  scalar.h
lib/cuda/kernels/elementwise/binary/: broadcast.cu
lib/cuda/kernels/elementwise/unary/: contiguous.cu  ndaffine.cu  strided.cu
lib/cuda/kernels/matmul/: matmul.cu
lib/proto/: backend.proto
lib/src/: lib.rs
lib/src/backend/: cpu.rs  cuda.rs  cuda_tests.rs  mod.rs
lib/src/backend/remote/: client.rs  enumdispatch.rs  mod.rs  protocol.rs  server.rs
lib/src/core/: idx.rs  meta.rs  mod.rs  primitives.rs  slice.rs  tensor.rs  untyped.rs  value.rs
lib/src/core/primops/: exp.rs  invexp.rs  mod.rs
lib/src/cuda/include/: common.h  kernels.h
lib/src/graph/: mod.rs
lib/src/macros/: mod.rs
lib/src/nn/: README.md  mod.rs
lib/src/ops/: base.rs  mod.rs
lib/src/ops/binary/: add.rs  mod.rs  mul.rs  sub.rs
lib/src/ops/linalg/: matmul.rs  mod.rs
lib/src/ops/scalar/: add.rs
lib/src/ops/unary/: add.rs  mod.rs  mul.rs  neg.rs  relu.rs  sigmoid.rs  sub.rs  tanh.rs
libs/rtensors/: Cargo.toml  expanded.rs
libs/rtensors/cuda/include/: binary.h  common.h  kernels.h  scalar.h
libs/rtensors/cuda/kernels/reduction/: reduce.cu
libs/rtensors/src/: lib.rs
libs/rtensors/src/backend/: README.md  cpu.rs  cuda.rs  cuda_tests.rs  mod.rs
libs/rtensors/src/core/: idx.rs  meta.rs  primitives.rs  tensor.rs  value.rs
libs/rtensors/src/graph/: mod.rs
libs/rtensors/src/ops/: mod.rs
libs/rtensors/src/testing/: mod.rs
(+100 files in other folders)
