[package]
name = "tensors"
version = "0.1.0"
edition = "2021"

[features]
default = []
cuda = ["cudarc"]
remote = []

[dependencies]
cudarc = { version = "0.18.1", features = ["cuda-13000"], optional = true }
thiserror = "2.0.17"

[build-dependencies]
cc = "1.0.82"
bindgen = "0.72.1"
regex = "1.12.2"
