[package]
name = "rtensors"
version = "0.1.0"
edition = "2021"

[features]
default = []
cuda = ["cudarc"]
remote = ["serde", "bincode", "flume", "rpc_proc"]

[dependencies]
rpc_proc = { path = "../rpc_proc", optional = true }
cudarc = { version = "0.18.1", features = ["cuda-13000"], optional = true }
thiserror = "2.0.17"
serde = { version = "1.0", features = ["derive"], optional = true }
bincode = { version = "1.3", optional = true }
flume = { version = "0.11", optional = true }
slotmap = "1.1.1"
rand = "0.9.2"
paste = "1.0.15"

[build-dependencies]
cc = "1.0.82"
bindgen = "0.72.1"
regex = "1.12.2"
